Fixed menu issues on IE9

--- a/aegon-sass-library/layout/sidebars/_menu_desktop.scss
+++ b/aegon-sass-library/layout/sidebars/_menu_desktop.scss
@@ -3,6 +3,9 @@
 // Aegon menu desktop
 // --------------------------------------------------
 
+html,body {
+  height: 100%;
+}
 aside.desktop {
   display: none;
   @include rem('width', 170);
@@ -12,7 +15,6 @@ aside.desktop {
   bottom: 0;
   left: 0;
   z-index: 1;
-
   a {
     background-color: $blue;
     background-image: none;
@@ -514,6 +516,7 @@ body.section-mijnaegon {
       bottom: 0;
       right: 0;
       left: 0;
+      height:100%;
       /* for older IE */
       transform: translateX(18.75rem);
       transform: translateX(300px);
@@ -564,13 +567,11 @@ html.lt-ie9, html.gte-ie9 {
   }
   body.pushmenu-to-right {  //showing the left pushmenu
     aside.desktop {
-      position: relative;
+      position: absolute;
+
     }
     .push-submenu {
       position: relative;
-    }
-    .stick-bottom {
-      display: none;
     }
   }
 }
